--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -259,6 +259,7 @@
       "transactions": "Transactions",
       "send": "Envoyer",
       "receive": "Recevoir",
+      "receiveBitcoins": "Recevoir des bitcoins",
       "sent": "Envoyé",
       "received": "Reçu",
       "receiveInfo": "Les paiements reçus directement à cette adresse ne sont pas suivis par Swiss Bitcoin Pay et ne sont donc pas soumis à des frais et ne sont pas inclus dans les exports.",
@@ -368,7 +369,7 @@
     },
     "connect": {
       "title": "Connectez votre BitBox02",
-      "connecting": "Connecter votre portefeuille",
+      "connecting": "Connectez votre portefeuille",
       "disconnected": "Portefeuille déconnecté",
       "updateBitbox": "Assurez-vous que votre BitBox02 dispose d'un firmware installé"
     },
